[gd_scene load_steps=63 format=2]

[ext_resource path="res://assets/espaco_instrucoes.png" type="Texture" id=1]
[ext_resource path="res://assets/plataforma.png" type="Texture" id=2]
[ext_resource path="res://assets/botao_lixeira.png" type="Texture" id=3]
[ext_resource path="res://assets/cenario_instrucoes.png" type="Texture" id=4]
[ext_resource path="res://assets/cenario_batalha.png" type="Texture" id=5]
[ext_resource path="res://assets/placa.png" type="Texture" id=6]
[ext_resource path="res://assets/instrucoes_borda.png" type="Texture" id=7]
[ext_resource path="res://assets/botao_play.png" type="Texture" id=8]
[ext_resource path="res://assets/base_cartas.png" type="Texture" id=9]
[ext_resource path="res://cenas_universais/mensagem_derrota.tscn" type="PackedScene" id=10]
[ext_resource path="res://cenas_universais/mensagem_vitoria.tscn" type="PackedScene" id=11]
[ext_resource path="res://cenas_universais/Dash/dash.tscn" type="PackedScene" id=12]
[ext_resource path="res://cenas_universais/botaoVoltaMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://cenas_universais/jogador.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://niveis/cordel2/c2_nivel1/cartas_c2_nivel2.gd" type="Script" id=16]
[ext_resource path="res://assets/mao_apontando.png" type="Texture" id=17]
[ext_resource path="res://niveis/cordel2/c2_nivel1/c2_nivel1_instrucoes.gd" type="Script" id=18]
[ext_resource path="res://niveis/cordel2/c2_nivel1/c2_nivel1.gd" type="Script" id=19]
[ext_resource path="res://cenas_universais/sons.tscn" type="PackedScene" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39, 38.25 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 15 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 227, 200 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 17 )
region = Rect2( 227, 0, 227, 200 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 17 )
region = Rect2( 0, 200, 227, 200 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 17 )
region = Rect2( 227, 200, 227, 200 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 17 )
region = Rect2( 0, 400, 227, 200 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 17 )
region = Rect2( 227, 400, 227, 200 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 17 )
region = Rect2( 0, 600, 227, 200 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 17 )
region = Rect2( 227, 600, 227, 200 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 17 )
region = Rect2( 0, 800, 227, 200 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 17 )
region = Rect2( 227, 800, 227, 200 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 17 )
region = Rect2( 0, 1000, 227, 200 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 17 )
region = Rect2( 227, 1000, 227, 200 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 227, 200 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 17 )
region = Rect2( 227, 0, 227, 200 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 17 )
region = Rect2( 0, 200, 227, 200 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 17 )
region = Rect2( 227, 200, 227, 200 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 17 )
region = Rect2( 0, 400, 227, 200 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 17 )
region = Rect2( 227, 400, 227, 200 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 17 )
region = Rect2( 0, 600, 227, 200 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 17 )
region = Rect2( 227, 600, 227, 200 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 17 )
region = Rect2( 0, 800, 227, 200 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 17 )
region = Rect2( 227, 800, 227, 200 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 17 )
region = Rect2( 0, 1000, 227, 200 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 17 )
region = Rect2( 227, 1000, 227, 200 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 227, 200 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 17 )
region = Rect2( 227, 0, 227, 200 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 17 )
region = Rect2( 0, 200, 227, 200 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 17 )
region = Rect2( 227, 200, 227, 200 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 17 )
region = Rect2( 0, 400, 227, 200 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 17 )
region = Rect2( 227, 400, 227, 200 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 17 )
region = Rect2( 0, 600, 227, 200 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 17 )
region = Rect2( 227, 600, 227, 200 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 17 )
region = Rect2( 0, 800, 227, 200 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 17 )
region = Rect2( 227, 800, 227, 200 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 17 )
region = Rect2( 0, 1000, 227, 200 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 17 )
region = Rect2( 227, 1000, 227, 200 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="c2_nivel1" type="Node2D"]
script = ExtResource( 19 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 225, 162 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 5 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 256, 150 )
texture = ExtResource( 4 )

[node name="s_instrucao1" type="Sprite" parent="fundo"]
position = Vector2( 190, -110.5 )
scale = Vector2( 1.1905, 1 )
texture = ExtResource( 1 )

[node name="borda_instrucao1" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 190.15, -110 )
scale = Vector2( 1.18797, 1 )
texture = ExtResource( 7 )

[node name="s_instrucao2" type="Sprite" parent="fundo"]
position = Vector2( 190, -37 )
scale = Vector2( 1.1905, 1 )
texture = ExtResource( 1 )

[node name="borda_instrucao2" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 190.15, -37 )
scale = Vector2( 1.18797, 1 )
texture = ExtResource( 7 )

[node name="s_instrucao3" type="Sprite" parent="fundo"]
position = Vector2( 190, 36 )
scale = Vector2( 1.1905, 1 )
texture = ExtResource( 1 )

[node name="borda_instrucao3" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 190.15, 36 )
scale = Vector2( 1.18797, 1 )
texture = ExtResource( 7 )

[node name="pisos" type="Node" parent="."]

[node name="piso_esquerda" type="Area2D" parent="pisos"]
position = Vector2( 138, 144 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="pisos/piso_esquerda"]
scale = Vector2( 6, 5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_esquerda"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 1 )

[node name="piso_centro" type="Area2D" parent="pisos"]
position = Vector2( 193, 144 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="pisos/piso_centro"]
position = Vector2( 2, 0 )
scale = Vector2( 6, 5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_centro"]
position = Vector2( 3, -69.75 )
shape = SubResource( 1 )

[node name="piso_direita" type="Area2D" parent="pisos"]
position = Vector2( 251, 144 )
scale = Vector2( 0.5, 0.5 )

[node name="placa" type="Sprite" parent="pisos/piso_direita"]
position = Vector2( -4, -76 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="pisos/piso_direita"]
scale = Vector2( 6, 5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_direita"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 1 )

[node name="instrucoes" type="Node" parent="."]
script = ExtResource( 18 )

[node name="instrucao1" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 9.0
margin_right = 508.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao2" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 82.0
margin_right = 508.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao3" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 155.0
margin_right = 508.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="botoes" type="Node" parent="."]

[node name="botao_pronto" type="TextureButton" parent="botoes"]
margin_left = 384.0
margin_top = 224.0
margin_right = 424.0
margin_bottom = 264.0
rect_scale = Vector2( 1.75, 1.75 )
texture_normal = ExtResource( 8 )

[node name="botao_lixeira" type="TextureButton" parent="botoes"]
margin_left = 451.0
margin_top = 229.0
margin_right = 491.0
margin_bottom = 269.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 3 )

[node name="botaoVoltaMenu" parent="botoes" instance=ExtResource( 13 )]
margin_left = 1.0
margin_top = 1.0
margin_right = 21.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )

[node name="cartas" type="Node" parent="."]
script = ExtResource( 16 )

[node name="carta0" type="TextureButton" parent="cartas"]
margin_left = 122.0
margin_top = 193.0
margin_right = 154.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta0"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="carta1" type="TextureButton" parent="cartas"]
margin_left = 200.0
margin_top = 193.0
margin_right = 232.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta1"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="mensagens" type="Node" parent="."]

[node name="mensagem_vitoria" parent="mensagens" instance=ExtResource( 11 )]
visible = false
nivelRestart = "res://niveis/cordel2/c2_nivel1/c2_nivel1.tscn"
nivelProximo = "res://niveis/cordel2/c2_nivel2/c2_nivel2.tscn"

[node name="mensagem_derrota" parent="mensagens" instance=ExtResource( 10 )]
visible = false
nivelRestart = "res://niveis/cordel2/c2_nivel1/c2_nivel1.tscn"
voltaMenu = "res://menu/menu.tscn"

[node name="Dash" parent="." instance=ExtResource( 12 )]

[node name="jogador" parent="." instance=ExtResource( 14 )]
position = Vector2( 141, 104 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 151 )
current = true

[node name="mao_carta1" type="AnimatedSprite" parent="."]
position = Vector2( 104, 236 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 53 )
frame = 11
speed_scale = 2.0
playing = true

[node name="mao_carta2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 286, 237 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 54 )
frame = 4
speed_scale = 2.0
playing = true
flip_h = true

[node name="mao_pronto" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 367, 260 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 55 )
frame = 9
speed_scale = 2.0
playing = true

[node name="sons" parent="." instance=ExtResource( 20 )]

[connection signal="body_entered" from="pisos/piso_direita" to="." method="_on_piso_direita_body_entered"]
[connection signal="body_exited" from="pisos/piso_direita" to="." method="_on_piso_direita_body_exited"]
[connection signal="pressed" from="botoes/botao_pronto" to="." method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_pronto" to="cartas" method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="instrucoes" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="cartas" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="cartas/carta0" to="instrucoes" method="_on_carta0_pressed"]
[connection signal="pressed" from="cartas/carta0" to="cartas" method="_on_carta0_pressed"]
[connection signal="pressed" from="cartas/carta1" to="instrucoes" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta1" to="cartas" method="_on_carta1_pressed"]
